--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aprenda sobre as unidades de medidas absolutas em CSS, com exemplos e características principais para o seu design web.">
     <title>Unidades de Medidas Absolutas</title>
-    <link rel="stylesheet" href="/CSS3/14 - unidade de medida absoluta/estilo.css">
+    <link rel="stylesheet" href='estilo.css'>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
